--- a/stylex.css
+++ b/stylex.css
@@ -2,15 +2,58 @@
     color: #97c93e !important;
 }
 
+.btn-platzi {
+    background-color: #97c93e;
+    color: white;
+}
+
+.btn-platzi:hover {
+    background-color: #82ad36;
+}
 
 #header img {
-    width: 80px;
+    width: 110px;
 }
 
 #main   .carousel-inner img {
     height: 70vh;
     object-fit: cover;
-    filter: grayscale(70%);
+    filter: grayscale(20%);
+}
+
+#carrousel {
+    position: relative;
+}
+#carrousel .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+
+}
+
+#carrousel .overlay .container,  
+#carrousel .overlay .row {
+    height: 100%;
+}
+
+#speakers .card-img-top {
+    max-width: 300px;
+     height: 300px;
+    object-fit: cover;
+}
+
+#place-time {
+    background-color: #343a40;
+    color: white;
+}
+
+
+#place-time img {
+     max-width: 100%;
 }
 
 #footer {
